[WIP] other suggestions